@@ -27,7 +27,7 @@
     <surefire.additional-jvm-args>-XX:MaxPermSize=512m</surefire.additional-jvm-args>
     <skipCheckstyle>true</skipCheckstyle>
     <quartz.version>2.2.3</quartz.version>
-    <osgi-test-tool.version>1.9</osgi-test-tool.version>
+    <osgi-test-tool.version>2.1</osgi-test-tool.version>
   </properties>
 
   <dependencies>  
@@ -69,13 +69,11 @@
     <dependency>
       <groupId>org.ow2.asm</groupId>
       <artifactId>asm</artifactId>
-      <version>7.2</version>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.hibernate</groupId>
       <artifactId>hibernate-core</artifactId>
-      <version>3.6.10.Final</version>
       <scope>test</scope>
     </dependency>
     <dependency>
@@ -86,6 +84,11 @@
     <dependency>
       <groupId>org.apache.derby</groupId>
       <artifactId>derby</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.derby</groupId>
+      <artifactId>derbytools</artifactId>
       <scope>test</scope>
     </dependency>
     <dependency>
@@ -145,8 +148,19 @@
     <dependency>
       <groupId>org.terracotta.test</groupId>
       <artifactId>container-test-framework</artifactId>
+      <exclusions>
+        <exclusion>
+          <groupId>org.apache.ant</groupId>
+          <artifactId>ant-launcher</artifactId>
+        </exclusion>
+      </exclusions>
     </dependency>
     <dependency>
+      <groupId>org.apache.ant</groupId>
+      <artifactId>ant-launcher</artifactId>
+      <version>1.10.12</version>
+    </dependency>
+  <dependency>
       <groupId>org.quartz-scheduler</groupId>
       <artifactId>quartz</artifactId>
       <version>${quartz.version}</version>
@@ -171,11 +185,34 @@
       <groupId>net.sf.ehcache.test</groupId>
       <artifactId>hibernate-ehcache-bundle</artifactId>
       <version>${osgi-test-tool.version}</version>
+      <exclusions>
+        <exclusion>
+          <groupId>org.hibernate</groupId>
+          <artifactId>hibernate-core</artifactId>
+        </exclusion>
+      </exclusions>
     </dependency>    
     <dependency>
       <groupId>org.terracotta.test</groupId>
       <artifactId>osgi-test-utils</artifactId>
       <version>${osgi-test-tool.version}</version>
+    </dependency>
+    <!-- The following hacks are for OsgiScheduledRefreshTest -->
+    <dependency>
+      <groupId>javax.xml.bind</groupId>
+      <artifactId>jaxb-api</artifactId>
+      <version>2.4.0-b180830.0359</version>
+      <exclusions>
+        <exclusion>
+          <groupId>javax.activation</groupId>
+          <artifactId>javax.activation-api</artifactId>
+        </exclusion>
+      </exclusions>
+    </dependency>
+    <dependency>
+      <groupId>com.sun.activation</groupId>
+      <artifactId>jakarta.activation</artifactId>
+      <version>1.2.2</version>
     </dependency>
   </dependencies>
 
@@ -184,6 +221,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-jar-plugin</artifactId>
+        <version>3.2.2</version>
         <executions>
           <execution>
             <id>test-jar</id>
@@ -211,57 +249,21 @@
   
   <profiles>
     <profile>
-      <id>include-container-tests</id>
-        <activation> 
-          <property>
-            <name>appserver</name>
-          </property> 
-        </activation>
-        <build>
-          <plugins>
-            <plugin>
-              <groupId>org.terracotta</groupId>
-              <artifactId>maven-forge-plugin</artifactId>
-              <configuration>
-                <includes>
-                  <include>**/container/**/*Test.java</include>
-                </includes>
-              </configuration>
-            </plugin>
-          </plugins>
-        </build>
-    </profile>
-    <profile>
-      <!-- this profile nullify the effect of above profile due to usuage of no-appserver on monkeys -->
-      <id>no-appserver-tests</id>
-        <activation> 
-          <property>
-            <name>appserver</name>
-            <value>no-appserver</value>
-          </property> 
-        </activation>
-        <build>
-          <plugins>
-            <plugin>
-              <groupId>org.terracotta</groupId>
-              <artifactId>maven-forge-plugin</artifactId>
-              <configuration>
-                <argLine>-Xmx768m</argLine>
-                <argLine>-XX:MaxPermSize=128m</argLine>
-                <includes>
-                  <include>**/*Test.java</include>
-                </includes>
-              </configuration>
-            </plugin>
-          </plugins>
-        </build>
-    </profile>     
-    <profile>
       <id>deploy-sonatype</id>
       <properties>
         <skipDeploy>true</skipDeploy>
       </properties>
-    </profile>    
+    </profile>
+    <profile>
+      <!-- This undoes some nastiness included by system-tests-parent... this module should not be testing ee -->
+      <id>ee</id>
+      <properties>
+        <tc.core.groupId>org.terracotta</tc.core.groupId>
+        <tc.core.artifactId>terracotta</tc.core.artifactId>
+        <tc.management.war.groupId>org.terracotta</tc.management.war.groupId>
+        <tc.management.war.artifactId>management-tsa-war</tc.management.war.artifactId>
+      </properties>
+    </profile>
   </profiles>
 
 </project>
